Banner Div alignment fixed

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -80,9 +80,10 @@ nav a {
 }
 
 .banner_img {
-    margin: 32px 24px;
+    padding: 32px 40px 32px 24px;
     width: 60%;
     height: auto;
+    flex-flow: wrap row;
 }
 .banner_img img {
     width: 100%;
@@ -94,18 +95,18 @@ nav a {
     flex-direction: column;
     justify-content: center;
     align-content: center;
-    margin: 32px;
     width: 40%;
 }
 
-.banner_text h1, h4 {
-    padding: 20px 0px 20px 0px;
+.banner_heading h1, h4 {
+    padding-right: 200px;
+    margin: 32px 0px;
 }
 
 .button {
     color: white;
     background-color: #4A4A4A;
-    margin: 20px 0px;
+    margin: 20px 200px 20px 0px;
     padding: 16px;
     border: none;
     font-family: Montserrat;
@@ -120,11 +121,9 @@ nav a {
 }
 
 .information_main {
-    margin: 32px 24px;
+    padding: 32px 24px;
     width: 60%;
     height: auto;
-
-
 }
 
 .information_main h2 {
